--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "node_modules/.bin/tsc",
+    "start": "node_modules/.bin/tsc && node build/index.js",
     "prepublishOnly": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -22,10 +23,15 @@
   },
   "homepage": "https://github.com/hukusuke1007/firestore_data_modeling_design#readme",
   "devDependencies": {
+    "@types/js-yaml": "^4.0.3",
+    "@types/node": "^16.10.3",
     "eslint": "^8.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.4.1",
     "typescript": "^4.4.3"
+  },
+  "dependencies": {
+    "js-yaml": "^4.1.0"
   }
 }
