--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,8 @@
     "module": "commonjs",
     "target": "es2017",
     "sourceMap": true,
-    "outDir": "./build/"
+    "outDir": "./lib/"
   },
   "include": ["src/**/*.ts"],
-  "exclude": [
-    "node_modules",
-    "src/**/*.spec.ts"
-  ],
+  "exclude": ["node_modules", "src/**/*.spec.ts"]
 }
