--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@types/js-yaml": "^4.0.3",
     "@types/node": "^16.10.3",
+    "@types/rimraf": "^3.0.2",
     "eslint": "^8.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
@@ -32,6 +33,7 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
-    "js-yaml": "^4.1.0"
+    "js-yaml": "^4.1.0",
+    "rimraf": "^3.0.2"
   }
 }
