--- a/sample_yaml/sample.yaml
+++ b/sample_yaml/sample.yaml
@@ -22,22 +22,25 @@ docs:
     description: 投稿者の情報
     codeGenerate: true
     data:
-      - field: name
+      - field: id
         type: string
+        example: DocumentId
+      - field: name
+        type: string,nullable
         example: ケン
       - field: age
-        type: int
+        type: int,nullable
         example: 10
       - field: image
-        type: map
+        type: map,nullable
         map:
           name: ThumbnailImage
           reference: ThumbnailImage
       - field: createdAt
-        type: timestamp
+        type: timestamp,nullable
         example: '2021-09-16T13:10:52+09:00'
       - field: updatedAt
-        type: timestamp
+        type: timestamp,nullable
         example: '2021-09-16T13:10:52+09:00'
       - field: posts
         type: collection,post
@@ -47,16 +50,16 @@ docs:
     codeGenerate: true
     data:
       - field: title
-        type: string
+        type: string,nullable
         example: タイトル
       - field: text
-        type: string
+        type: string,nullable
         example: テキスト内容
       - field: createdAt
-        type: timestamp
+        type: timestamp,nullable
         example: '2021-09-16T13:10:52+09:00'
       - field: updatedAt
-        type: timestamp
+        type: timestamp,nullable
         example: '2021-09-16T13:10:52+09:00'
   - name: Color
     path: /master/${masterId}/colors/${colorId}
@@ -64,7 +67,7 @@ docs:
     codeGenerate: true
     data:
       - field: codes
-        type: string,array
+        type: string,array,nullable
         example: ['000000', FFFFFF]
 maps:
   - name: ThumbnailImage
