--- a/yaml/db.yaml
+++ b/yaml/db.yaml
@@ -41,8 +41,9 @@ docs:
       - field: updatedAt
         type: timestamp,nullable
         example: '2021-09-16T13:10:52+09:00'
+    collections:
       - field: posts
-        type: collection,Post
+        type: Post
   - name: Post
     path: /social/${socialId}/posters/${posterId}/posts/${postId}
     description: 投稿情報
@@ -56,15 +57,22 @@ docs:
         example: テキスト内容
       - field: likeCount
         type: int,nullable
-        example: いいね数
+        example: 10
+      - field: stars
+        type: double,nullable
+        example: 4.5
+      - field: isBookmark
+        type: bool,nullable
+        example: true
       - field: createdAt
         type: timestamp,nullable
         example: '2021-09-16T13:10:52+09:00'
       - field: updatedAt
         type: timestamp,nullable
         example: '2021-09-16T13:10:52+09:00'
+    collections:
       - field: likes
-        type: collection,Like
+        type: Like
   - name: Like
     path: /social/${socialId}/posters/${posterId}/posts/${postId}/likes/${likeId}
     description: 投稿情報
